fix: bug in the view on small screens for date picker

--- a/frontend/src/stylesheets/newToDo.css
+++ b/frontend/src/stylesheets/newToDo.css
@@ -9,6 +9,12 @@
 .newtodo__calendarIcon {
     font-size: 40px;
     color: #757575;
+    position: relative;
+}
+
+svg.newtodo__calendarIcon {
+    position: absolute;
+    top: 20px;
 }
 
 .newtodo__calendarIcon:hover {
